--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "brackets/craftable": "^5.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "orangehill/iseed": "^2.6"
     },
     "require-dev": {
         "brackets/admin-generator": "^5.0",
