--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,16 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "orangehill/iseed": "^2.6"
+        "orangehill/iseed": "^2.6",
+        "oscarafdev/migrations-generator": "2.0.13"
     },
     "require-dev": {
         "brackets/admin-generator": "^5.0",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
+        "krlove/eloquent-model-generator": "^1.3",
         "mockery/mockery": "^1.0",
+        "mpociot/laravel-test-factory-helper": "^2.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
     },
