--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js?id=56300e638cb874e3959c",
-    "/js/app.js": "/js/app.js?id=cd94bdbf0cc32cf23732",
-    "/css/app.css": "/css/app.css?id=d41d8cd98f00b204e980",
-    "/css/admin.css": "/css/admin.css?id=53eb3fd7dd93957c9470"
+    "/js/admin.js": "/js/admin.js",
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/css/admin.css": "/css/admin.css"
 }
