--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "cross-env": "^5.1",
+        "craftable": "^2.1.3",
+        "cross-env": "^5.2.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0",
-        "craftable": "^2.1.3"
+        "sass-loader": "^8.0.0"
     },
     "dependencies": {
         "v-money": "^0.8.1",
