--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "orangehill/iseed": "^2.6",
-        "oscarafdev/migrations-generator": "2.0.13"
+        "oscarafdev/migrations-generator": "2.0.13",
+        "spatie/laravel-activitylog": "^3.9"
     },
     "require-dev": {
         "brackets/admin-generator": "^5.0",
