--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ yarn-error.log
 .idea/
 db/
 public/media/
+
+!vendor/brackets/admin-ui/resources/views/admin/partials/main-styles.blade.php
+!vendor/brackets/admin-ui/resources/views/admin/partials/main-bottom-scripts.blade.php
