--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
+Options +SymLinksIfOwnerMatch
 RewriteEngine On
 
 #----------------------------------------------
@@ -13,11 +14,8 @@ RewriteRule ^ index.php [L]
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_URI} !^/public/
-RewriteRule ^(login|uploads|assets|css|js|images|ca|favicons|fonts|)/(.*)$ public/$1/$2 [L,NC]
+RewriteRule ^(assets|css|js|images|favicons|fonts|)/(.*)$ public/$1/$2 [L,NC]
 
-RewriteCond %{HTTP:Authorization} ^(.*)
-RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
+#RewriteCond %{HTTP:Authorization} ^(.*)
+#RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
 
-#Options +SymLinksIfOwnerMatch
-#RewriteEngine On
-#RewriteRule ^ index.php [L]
