--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "pusher/pusher-php-server": "^4.1",
         "rap2hpoutre/laravel-log-viewer": "^1.3",
         "snowfire/beautymail": "dev-master",
+        "spatie/array-to-xml": "^2.11",
         "spatie/laravel-activitylog": "^3.9",
         "symfony/css-selector": "^4.0"
     },
