--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "laravel-echo": "^1.6.1",
         "pusher-js": "^5.1.1",
         "v-money": "^0.8.1",
+        "vue-chat-scroll": "^1.3.6",
         "vue-the-mask": "^0.11.1",
         "vue-viacep": "^1.0.3"
     }
